--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -2,16 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>Java-In-Action</artifactId>
+        <groupId>com.jhmarryme</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.jhmarryme</groupId>
-    <artifactId>Java-In-Action</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>common</module>
-        <module>demo</module>
-    </modules>
+    <artifactId>demo</artifactId>
 
     <properties>
         <maven.compiler.source>15</maven.compiler.source>
