--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <commons-lang3.version>3.11</commons-lang3.version>
         <commons-codec.version>1.15</commons-codec.version>
         <commons-io.version>2.8.0</commons-io.version>
+        <easyexcel.version>2.2.7</easyexcel.version>
     </properties>
 
     <parent>
