完善 每日轮值

--- a/demo/src/main/resources/log4j2.properties
+++ b/demo/src/main/resources/log4j2.properties
@@ -1,5 +1,5 @@
 #用于设置log4j2自身内部的信息输出,可以不设置,当设置成trace时,会看到log4j2内部各种详细输出
-status = debug
+status = info
 dest = err
 name = PropertiesConfig
 
@@ -21,7 +21,7 @@ property.layoutPattern = %-d{yyyy-MM-dd HH:mm:ss,SSS} %p %c %m%n
 # 级别过滤（过滤日志记录）
 filter.threshold.type = ThresholdFilter
 # 只记录debug级别以上的日志，大小写无关：(ALL<)TRACE<DEBUG<INFO<WARN<ERROR<FATAL(<OFF)
-filter.threshold.level = debug
+filter.threshold.level = info
 
 # 控制台类型的日志输出源
 appender.console.type = Console
