--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -1,15 +1,22 @@
+############################################################
+#
+# web访问端口号
+#
+############################################################
+server:
+  port: 7777
+  tomcat:
+    uri-encoding: UTF-8
+  max-http-header-size: 80KB
+
+############################################################
+#
+# 配置数据源信息
+#
+############################################################
 spring:
-  redis:
-    database: 0
-    host: 1.14.140.53
-    port: 6379
-    jedis:
-      pool:
-        max-active: 100
-        max-idle: 10
-        max-wait: 100000
-    timeout: 5000
-    password: jh541224
+#  profiles:
+#    active: dev
   datasource: # 数据源的相关配置
     type: com.zaxxer.hikari.HikariDataSource          # 数据源类型：HikariCP
     driver-class-name: com.mysql.jdbc.Driver          # mysql驱动
@@ -25,5 +32,44 @@ spring:
       pool-name: DateSourceHikariCP     # 连接池名字
       max-lifetime: 1800000           # 连接的生命时长（毫秒），超时而且没被使用则被释放（retired），默认:30分钟 1800000ms
       connection-test-query: SELECT 1
+#  servlet:
+#    multipart:
+#      max-file-size: 512000     # 文件上传大小限制为500kb
+#      max-request-size: 512000  # 请求大小限制为500kb
+  redis:
+    database: 0
+    host: 1.14.140.53
+    port: 6379
+    jedis:
+      pool:
+        max-active: 100
+        max-idle: 10
+        max-wait: 100000
+    timeout: 5000
+    password: jh541224
+
+############################################################
+#
+# mybatis 配置
+#
+############################################################
 mybatis:
-  type-aliases-package: com.jhmarryme.demo.pojo.model
+  type-aliases-package: com.jhmarryme.demo.pojo.model          # 所有POJO类所在包路径
+#  mapper-locations: classpath:mapper/*.xml      # mapper映射文件
+#  configuration:
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+############################################################
+#
+# mybatis mapper 配置
+#
+############################################################
+# 通用 Mapper 配置
+mapper:
+  mappers: com.jhmarryme.demo.common.mybatis.BaseMapper
+  not-empty: false    # 在进行数据库操作的的时候，判断表达式 username != null, 是否追加 username != ''
+  identity: MYSQL
+# 分页插件配置
+#pagehelper:
+#  helperDialect: mysql
+#  supportMethodsArguments: true
