调整coder信息获取途径

--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
 #    active: dev
   datasource: # 数据源的相关配置
     type: com.zaxxer.hikari.HikariDataSource          # 数据源类型：HikariCP
-    driver-class-name: com.mysql.jdbc.Driver          # mysql驱动
+    driver-class-name: com.mysql.cj.jdbc.Driver          # mysql驱动
     url: jdbc:mysql://1.14.140.53:3306/demo?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
     username: root
     password: jh541224
