--- a/demo/src/main/resources/log4j2.properties
+++ b/demo/src/main/resources/log4j2.properties
@@ -21,7 +21,7 @@ property.layoutPattern = %-d{yyyy-MM-dd HH:mm:ss,SSS} %p %c %m%n
 # 级别过滤（过滤日志记录）
 filter.threshold.type = ThresholdFilter
 # 只记录debug级别以上的日志，大小写无关：(ALL<)TRACE<DEBUG<INFO<WARN<ERROR<FATAL(<OFF)
-filter.threshold.level = info
+filter.threshold.level = debug
 
 # 控制台类型的日志输出源
 appender.console.type = Console
