--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -47,7 +47,10 @@ spring:
         max-wait: 100000
     timeout: 5000
     password: jh541224
-
+  messages:
+    basename: i18n/messages
+    encoding: utf-8
+    cache-duration: 1
 ############################################################
 #
 # mybatis 配置
