--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <commons-io.version>2.8.0</commons-io.version>
         <easyexcel.version>2.2.6</easyexcel.version>
         <tk.mybatis.mapper.version>2.1.5</tk.mybatis.mapper.version>
+        <hibernate.validator.version>7.0.1.Final</hibernate.validator.version>
     </properties>
 
     <parent>
