代码生成器init

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>common</module>
         <module>demo</module>
         <module>mybatis-generator</module>
+        <module>mybatis-plus-auto-generator</module>
     </modules>
 
     <properties>
